# UBenchAI_Framework_Team_9

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  report_20260111_194119.md  setup_structure.sh
docs/: benchmark_report.md  timeflow.mermaid
ollama-exporter/: README.md  ollama_metrics_exporter.py
recipes/clients/: large-model-benchmark.yaml  llm-stress-test.yaml  ollama-stress-test.yaml
recipes/monitors/: default-monitor.yaml  ollama-monitor.yaml
recipes/servers/: ollama-inference.yaml  qdrant-vectordb.yaml  vllm-inference.yaml
scripts/: quick_benchmark.sh  run_all_tests.sh
src/inferbench/: __init__.py
src/inferbench/analysis/: __init__.py  comparator.py
src/inferbench/clients/: __init__.py  manager.py
src/inferbench/core/: __init__.py  apptainer.py  config.py  exceptions.py  models.py  recipe_loader.py  registry.py  slurm.py
src/inferbench/interface/cli/: __init__.py  main.py
src/inferbench/interface/web/: __init__.py  app.py
src/inferbench/logs/: __init__.py  manager.py
src/inferbench/monitors/: __init__.py  manager.py
src/inferbench/servers/: __init__.py  manager.py
src/inferbench/utils/: __init__.py  logging.py
src/ubenchai/: __init__.py
src/ubenchai/analysis/: __init__.py  analyzer.py
templates/: benchmark_report.html
tests/: conftest.py
tests/unit/: test_client_manager.py  test_core.py  test_log_manager.py  test_monitor_manager.py  test_recipe_loader.py  test_registry.py  test_server_manager.py  test_slurm_apptainer.py  test_web_interface.py
tools/: benchmark_suite.py  ubenchai_tui.py
(+14 files in other folders)
