[tool.poetry]
name = "ubenchai"
version = "1.0.0"
description = "Unified Benchmarking Framework for AI Factory Workloads on MeluXina"
authors = ["Team 9 - EUMaster4HPC Student Challenge"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "ubenchai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0.2"
loguru = "^0.7.3"
rich = "^13.9.4"
pydantic = "^2.10.3"
httpx = "^0.28.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"
jinja2 = "^3.1.4"
psutil = "^6.1.1"
python-dotenv = "^1.0.1"
prometheus-client = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.4"
mypy = "^1.14.0"
pytest-asyncio = "^0.25.0"

[tool.poetry.scripts]
ubenchai = "ubenchai.interface.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
